[project]
name = "gevt"
description = 'Event management to affect tasks to volunteers'
dependencies = [
    "pymodaq_utils",
    "pymodaq_gui",
    "pyqt5",
    "python-dateutil",
    "yawrap",
]

authors = [
    {name = "Sebastien Weber", email = "seb.weber@gmail.com"},
]
maintainers = [
    {name = "Sebastien Weber", email = "seb.weber@gmail.com"},
]

# nottodo: leave everything below as is!

dynamic = ["version"]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/seb5g/gevt"
Repository = "https://github.com/seb5g/gevt"
Documentation  = "http://gevt.readthedocs.io"
Issues = 'https://github.com/seb5g/gevt/issues'

[project.scripts]
gevt = "gevt.gevt:start_gevt"

[build-system]
requires = [
    "hatchling>=1.9.0",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"


