[metadata]
name = gevt
version = file: src/gevt/VERSION
description = Gestionnaire de Volontaires et de Tâches
long_description = file: README.md
license = MIT
licence_file = LICENSE
url = http://gevt.readthedocs.io
author = Sébastien Weber
author_email = sebastien.weber@cemes.fr
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Visualization
    License :: CeCILL-B Free Software License Agreement (CECILL-B)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: User Interfaces

[options]
py_module = gevt
python_requires = >=3.7, <3.9
install_requires=
    pymodaq

package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    gevt=gevt.gevt:start_gevt
